cluster/kubernetes/observability/kromgo/ingress/kromgo-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
  namespace: observability
spec:
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: kromgo
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: kromgo
          port: 80
